tests/paczka1/fuzzy1/88487143.err
Error in line 1: moYbXmXfhkm A971 37,4
Error in line 4: jjMhn S857 89,4
Error in line 11: moYbXmXfhkm S857 26,6
Error in line 10: yCMWwOxiv S857 44,6
Error in line 18: IUOXB S857 80,9
Error in line 17: kyV S857 57,6
Error in line 24: IUOXB S31 0,3
Error in line 33: moYbXmXfhkm S694 44,4
